Update MainFrame.java